# internal/dto/image_dto.go
@@ -5,3 +5,7 @@ type CreateImageDTO struct {
 	URL string `json:"url" validate:"required,url"`
 	BlockID string `json:"block_id" validate:"required,uuid"`
 }
+
+type FindImageDTO struct {
+	URL string `json:"url"`
+}
