# internal/handler/news_controller.go
@@ -3,6 +3,7 @@ package handler
 import (
 	"news_service/internal/dto"
 	_ "news_service/internal/dto"
+	"news_service/internal/logger"
 	_ "news_service/internal/repository"
 	"news_service/internal/service"
 
@@ -20,7 +21,6 @@ func CreateNewsController(newsService *service.NewsService) *NewsController {
 	}
 }
 
-
 // @Summary     create news
 // @Tags        news
 // @Accept      json
@@ -34,19 +34,67 @@ func CreateNewsController(newsService *service.NewsService) *NewsController {
 // @Router      /news/create [post]
 // @Security    JWT
 func (n *NewsController) CreateNews() fiber.Handler {
- 	return func(ctx *fiber.Ctx) error {
+	return func(ctx *fiber.Ctx) error {
 		mapClaims := ctx.Locals("user").(jwt.MapClaims)
 		user := map[string]interface{}(mapClaims)
 		authId := user["id"].(string)
- 		var input dto.CreateNewsDTO
- 		if err := ctx.BodyParser(&input); err != nil {
- 			return  ctx.Status(400).JSON(fiber.Map{"error": err.Error()})
- 		}
+		var input dto.CreateNewsDTO
+		if err := ctx.BodyParser(&input); err != nil {
+			return ctx.Status(400).JSON(fiber.Map{"error": err.Error()})
+		}
 
- 		status, message := n.newsService.CreateNews(input, authId)
+		status, message := n.newsService.CreateNews(input, authId)
 		if status >= 400 {
+			return ctx.Status(status).JSON(fiber.Map{"error": message})
+		}
+		return ctx.Status(200).JSON(message)
+	}
+}
+
+// @Summary     find news
+// @Tags        news
+// @Accept      json
+// @Produce     json
+// @Param        id   path      string  true  "news ID"
+// @Success     200 {object} dto.FindNewsDTO
+// @Failure     400 {object} dto.ErrorDTO
+// @Failure     401 {object} dto.ErrorDTO
+// @Failure     403 {object} dto.ErrorDTO
+// @Failure     500 {object} dto.ErrorDTO
+// @Router      /news/{id} [get]
+// @Security    JWT
+func (n *NewsController) FindNewsById() fiber.Handler {
+	return func(ctx *fiber.Ctx) error {
+		id := ctx.Params("id")
+		status, message := n.newsService.FindNewsById(id)
+		if status >= 400 {
+			logger.ZapLogger.Error("error " + message.(string))
 			return  ctx.Status(status).JSON(fiber.Map{"error": message})
 		}
 		return  ctx.Status(200).JSON(message)
+	}
+}
+
+// @Summary     publish news
+// @Tags        news
+// @Accept      json
+// @Produce     json
+// @Param        id   path      string  true  "news ID"
+// @Success     200 {object} dto.MessageDTO
+// @Failure     400 {object} dto.ErrorDTO
+// @Failure     401 {object} dto.ErrorDTO
+// @Failure     403 {object} dto.ErrorDTO
+// @Failure     500 {object} dto.ErrorDTO
+// @Router      /news/publish/{id} [patch]
+// @Security    JWT
+func (n *NewsController) PublishNewsById() fiber.Handler {
+	return func(ctx *fiber.Ctx) error {
+		id := ctx.Params("id")
+		status, message := n.newsService.PublishNews(id)
+		if status >= 400 {
+			logger.ZapLogger.Error("error " + message.(string))
+			return  ctx.Status(status).JSON(fiber.Map{"error": message})
+		}
+		return ctx.Status(200).JSON(message)
 	}
 }
